Minor spacing fix

--- a/components/Page/styles.module.css
+++ b/components/Page/styles.module.css
@@ -22,6 +22,6 @@
     gap: 0;
   }
   .page {
-    margin-bottom: 26rem;
+    margin-bottom: 28rem;
   }
 }
